src/assets/css/aniket/responsive.css
/* @media screen and (max-width: 575px) { .container { max-width: calc(100% + 36px); } }
@media screen and (min-width: 640px) { .container { max-width: calc(600px + 36px); } }
@media screen and (min-width: 768px) { .container { max-width: calc(700px + 36px); } }
@media screen and (min-width: 992px) {}
@media screen and (min-width: 1024px) { .container { max-width: calc(840px + 36px); } }
@media screen and (min-width: 1360px) { .container { max-width: calc(992px + 36px); } }
@media screen and (min-width: 1440px) { .container { max-width: calc(1180px + 36px); } }
@media screen and (min-width: 1600px) { .container { max-width: calc(1280px + 36px); } }
@media screen and (min-width: 1800px) { .container { max-width: calc(1440px + 36px); } } */


@media screen and (max-width: 575px) { .container { max-width: calc(100% + 36px); } }
@media screen and (min-width: 640px) { .container { max-width: calc(500px + 36px); } }
@media screen and (min-width: 768px) { .container { max-width: calc(700px + 36px); } }
@media screen and (min-width: 992px) {}
@media screen and (min-width: 1024px) { .container { max-width: calc(800px + 36px); } }
@media screen and (min-width: 1200px) { .container { max-width: calc(960px + 36px); } }
@media screen and (min-width: 1360px) { .container { max-width: calc(1060px + 36px); } }
@media screen and (min-width: 1440px) { .container { max-width: calc(1200px + 36px); } }
@media screen and (min-width: 1600px) { .container { max-width: calc(1300px + 36px); } }
@media screen and (min-width: 1800px) { .container { max-width: calc(1440px + 36px); } }


/* ======= MIN-WIDTH COMPLETED ======= */


@media screen and (max-width: 1799px) {
    .ai-modals-row :not(.ai-center-icon) img { width: 38px; }
}

@media screen and (max-width: 1599px) {
    .stats-item { padding: 18px; }
    .stats-item.one { height: 150px; }
    .stats-item.two { height: 230px; }
    .stats-item.three { height: 310px; }
    .nav-seprator { width: 90px; }
    .name-initial { width: 60px; min-width: auto; height: 60px; }
    .ai-modals-row div:not(.ai-center-icon) { width: 60px; height: 60px; }
    .ai-modals-row :not(.ai-center-icon) img { width: 32px; }
    .ai-icon.assignment { bottom: 30%; right: 10%; }
    .ai-center-icon { width: 190px; height: 190px; }
    .ai-center-icon img { width: 100px; }
}

@media screen and (max-width: 1439px) {}

@media screen and (max-width: 1359px) {
    .ai-modals-row div:not(.ai-center-icon) { width: 55px; height: 55px; }
    .ai-modals-row :not(.ai-center-icon) img { width: 28px; }
    .ai-center-icon { width: 140px; height: 140px; }
    .ai-center-icon img { width: 75px; }
    .stats-item { padding: 16px; }
    .stats-count .h6 { font-size: 17px; }
    .stats-item.one { height: 130px; }
    .stats-item.two { height: 200px; }
    .stats-item.three { height: 270px; }
    .tools-item.orange, .tools-item.green { width: 45%; }
}

@media screen and (max-width: 1199px) {
    .stats-count .h6 { font-size: 16px; }
    .stats-item { width: 165px; }
    .ai-modals-row div:not(.ai-center-icon) { width: 50px; height: 50px; }
    
}

@media screen and (max-width: 1023px) {
    .hamburger { border-radius: 0px; }
    .nav-mobile { position: absolute; width: 50%; height: max-content; }
    .nav-wrapper { position: relative; }
    .nav-mobile.active { background-color: var(--white); padding: 30px; }
    .nav-mobile .nav-link.text-18 { font-size: 18px; line-height: 26px; }
    .navbar-links.nav-mobile { top: 122px; right: 0; gap: 0; border-radius: 0px; }
    .mobile-menu-ul li { margin-bottom: 12px; }
    .mobile-menu-ul li:last-child { margin-bottom: 0; }
    .menu-hl { display: block; width: 100%; height: 1px; background-color: var(--black); margin: 20px 0; opacity: 0.4; }
    .nav-contact-block a { font-size: 16px; line-height: 24px; display: flex; align-items: center; gap: 10px; color: var(--grey); }
    .nav-connect-socials { margin-top: 20px; display: flex; align-items: center; gap: 10px; }
    .nav-connect-socials a { font-size: 20px; line-height: 1; }
    .ai-icon.chat { right: 10%; }
    .ai-icon.assignment { bottom: 25%; right: 16%; }
    .ai-icon.add-ad { top: 37%; }
    .ai-center-icon { width: 130px; height: 130px; }
    .stats-item { padding: 14px; }
    .stats-item.one { height: 115px; }
    .stats-item.two { height: 175px; }
    .stats-item.three { height: 235px; }
    .tools-item.orange, .tools-item.green { width: 50%; }
    .hamburger { width: 40px; height: 40px; }
}

@media screen and (max-width: 991px) {
    .nav-mobile { width: 45%; }
    .nav-mobile.active { padding: 25px; }
    .mobile-menu-ul li { margin-bottom: 8px; }
    .nav-mobile .nav-link.text-18 { font-size: 16px; line-height: 22px; }
    .nav-contact-block a { font-size: 15px; line-height: 23px; }
    .nav-connect-socials { margin-top: 18px; }
    .nav-connect-socials a { font-size: 18px; line-height: 1; }
} 

@media screen and (max-width: 839px) {
    .ai-modals-row div:not(.ai-center-icon) { width: 45px; height: 45px; }
    .ai-modals-row :not(.ai-center-icon) img { width: 24px; }
}

@media screen and (max-width: 767px) {
    .hamburger { gap: 4px; }
    .nav-mobile { width: 70%; }
    .nav-mobile.active { padding: 20px; }
    .navbar-links.nav-mobile { top: 100px; }
    .bar { width: 18px; }
    .hamburger.active .bar:first-child {  transform: translateY(7px) rotate(45deg); }
    .hamburger.active .bar:nth-child(3) { transform: translateY(-5px) rotate(-45deg); }
    .nav-connect-socials a { font-size: 20px; }

    .ai-icon.person { top: 10%; left: 10%; }
    .ai-icon.add-reaction {  bottom: 30%; left: 20%; }
    .ai-icon.calender { bottom: 25%; }
    .ai-icon.thumb-up { top: 22%; right: 25%; }


}

@media screen and (max-width: 639px) {
    .nav-mobile { width: 60%; }
    .mobile-menu-ul li { margin-bottom: 6px; }
    .tools-item.orange, .tools-item.green { width: 80%; }
    .tools-item .h6 { margin-bottom: 0; }
    .b-feature-item, .b-post-items.mini { width: 75%; margin: 0 auto; }
    .team-testimonial-inner { gap: 20px; }
}

@media screen and (max-width: 575px) {
    .nav-mobile { width: 320px; }
    .stats-list { gap: 10px; }
    .stats-item.one { width: 250px; height: 100px; }
    .stats-item.two { width: 310px; height: 100px; }
    .stats-item.three { width: 370px; height: 100px; }
    .section { padding: 60px 0; }
    .ai-center-icon { width: 110px; height: 110px; }
    .ai-center-icon img { width: 70px; }
    .ai-icon.person { top: 0%; left: 46%; }
    .ai-icon.add-ad { top: 14%; right: 10%; }
    .ai-icon.thumb-up { top: auto; bottom: 30%; right: 12%; }
    .ai-icon.chat { inset: auto auto -2% 52%; }
    .ai-icon.assignment { bottom: 0%; left: 17%; right: auto; }
    .ai-icon.calender { bottom: 35%; left: 5%; }
    .ai-icon.add-reaction { top: 8%; bottom: auto; left: 12%; }
    .curve-lg { top: 50%; }
    .b-feature-item, .b-post-items.mini { width: 80%; }
    .ai-icon.thumb-up { right: 5%; }
    .ai-icon.chat { inset: auto auto 0% 60%;}
    .ai-icon.assignment { left: 20%; }
    .curve-lg { top: 60%; }
    .b-post-items.mini .b-post-img img { height: 220px; }
    .b-post-items.mini .b-post-img, .b-feature-item img { height: 220px; }
    
}

@media screen and (max-width: 480px) {
    .stats-item.one { width: 220px; height: 90px; }
    .stats-item.two { width: 290px; height: 90px; }
    .stats-item.three { width: 350px; height: 90px; }
    .b-feature-item, .b-post-items.mini { width: 100%; }
    
}

@media screen and (max-width: 459px) {
    .nav-mobile { width: calc(100% + 36px); transform: translate(18px, 0) !important; }
    .navbar-links.nav-mobile { top: 60px; }
    .nav-mobile.active { box-shadow: none; }
    .tools-item.orange, .tools-item.green { width: 100%; }
}

@media screen and (max-width: 400px) {
    .navbar-links.nav-mobile { top: 50px; }
    .nav-mobile.active { padding-bottom: 40px; }
    .stats-item.one { width: 70%; height: 85px; }
    .stats-item.two { width: 85%; height: 85px; }
    .stats-item.three { width: 100%; height: 85px; }
    .curve-lg { top: 65%; }
}

@media screen and (max-width: 374px) {}

@media screen and (max-width: 359px) {}

